--- a/assets/css/font.css
+++ b/assets/css/font.css
@@ -2,6 +2,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,400;9..40,600;9..40,800;9..40,900;9..40,1000&family=Urbanist:wght@800;900&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 /*@font-face {*/
 /*    font-family: 'Montserrat';*/
 /*    src: url("https://blogsources-1305284863.file.myqcloud.com/webfonts/Montserrat-VariableFont_wght.ttf") format("truetype");*/
