--- a/assets/css/article.scss
+++ b/assets/css/article.scss
@@ -1,13 +1,10 @@
 .article{
   h1 {
-    font-size: 3.6em;
-    color: #ca1b30;
-    font-weight: bold;
-    margin-bottom: 1em;
+    display: none;
   }
 
   h2 {
-    font-size: 2em;
+    font-size: 1.5em;
     color: #ca1b30;
     font-weight: bold;
     margin: 1.5em 0 1em 0;
@@ -15,13 +12,13 @@
 
   p {
     margin: 1em 0 1em 0;
-    font-size: 1.2em;
+    font-size: 1em;
     line-height: 2em;
     text-indent: 2em;
   }
 
   ul {
-    font-size: 1.2em;
+    font-size: 1em;
     line-height: 2em;
     list-style: square;
     margin-left: 2em;
@@ -32,7 +29,9 @@
     margin: 0 auto;
   }
 
-
+  a {
+    @apply text-red-600
+  }
 
 
 
